--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,10 @@
       </nav>
       <div id="list"></div>
       <div id="summery" class="summery">
-        
+        <h2 class="order">Your order</h2>
+      </div>
+      <div id="appent-item">
+
       </div>
     </div>
   </body>
