--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,7 @@
       <div id="summery" class="summery">
         <h2 class="order">Your order</h2>
       </div>
-      <div id="appent-item">
-
-      </div>
+      <div id="appent-item"></div>
     </div>
   </body>
 </html>
